updated more explanations for 2sls, still need to write conclusion

--- a/Endogeneity and Instrumental Variable Regression.ipynb
+++ b/Endogeneity and Instrumental Variable Regression.ipynb
@@ -817,13 +817,28 @@
     "\n",
     "\n",
     "## Part 4: Instrumenting using two-stage least squares\n",
-    "Now lets compare the coefficient estimates from OLS to IV.\n",
+    "Some background and information about two-stage least squares regression: It's called two stage because there are actually two stages of regression done (earth shattering I know). \n",
+    "\n",
+    "### First stage\n",
+    "In the first stage, the matrix $X$, which contains the endogenous information, is projected on to $Z$. $Z$ is the matrix without endogenous information that includes the variable(s) that are our instruments. Mathematically:\n",
+    "$$ X = \\gamma Z + V $$ where $V$ is the error, and $\\hat\\gamma = (Z'  Z)^{-1}Z' X$.\n",
+    "\n",
+    "The projection of X on to Z is then:\n",
+    "$$ \\hat X = \\hat\\gamma Z = Z (Z'  Z)^{-1}Z' X $$\n",
+    "$$ = P_z X, \\text{ where } P_Z = Z (Z'  Z)^{-1}Z'$$\n",
+    "\n",
+    "### Second stage\n",
+    "\n",
+    "We repeat the same process as above using\n",
+    "\n",
+    "$$ Y = \\hat X \\beta + \\epsilon $$\n",
+    "\n",
     "\n",
     "### Specifying the two stage least squares model\n",
     "\n",
-    "The documentation for IV2SLS is somewhat confusing and conflicts with some of the terminology that I've used in my classes. So, for clarification: \n",
+    "The documentation for IV2SLS in statsmodels is somewhat confusing and conflicts with some of the terminology that I've used in my classes. So, for clarification: \n",
     "   1. endog is the dependent variable, y\n",
-    "   2. exog is the x matrix that has the endogenous information in it. Include the endogenous variables in it\n",
+    "   2. exog is the x matrix that has the endogenous information in it. Include the endogenous variables in it.\n",
     "   3. instrument is the z matrix. Include all the variables that are not endogenous and replace the endogenous variables from the exog matrix (above) with what ever instruments you choose for them."
    ]
   },
@@ -958,9 +973,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The affect of education on the age of first birth is fairly large. \n",
+    "The effect of education on the age of first birth is fairly large. \n",
     "\n",
-    "On average, every year of education increases age of first birth by .327 years."
+    "On average, every year of education increases age of first birth by .327 years. This speaks to the positive effects of education. Interestingly, it is the only statistically significant variable at the .01 level."
    ]
   },
   {
@@ -1114,7 +1129,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 6: Hausman-Wu test for endogeneity\n"
+    "## Part 6: Hausman-Wu test for endogeneity\n",
+    "\n",
+    "Steps:\n",
+    "   1. Run relevancy regression (endog variable ~ exogenous variables + instrument(s) + error)\n",
+    "   2. Get the predicted residuals from this regression ($\\hat r$)\n",
+    "   3. Run regression $Y = X\\gamma + \\hat r \\beta + u$\n",
+    "   4. Test whether the coefficient on $\\hat r$ is significantly different than 0 using an F-test with 1 degree of freedom\n",
+    "  \n"
    ]
   },
   {
