--- a/Endogeneity and Instrumental Variable Regression.ipynb
+++ b/Endogeneity and Instrumental Variable Regression.ipynb
@@ -1645,52 +1645,11 @@
    "source": [
     "I conclude that these are indeed strong and relevant instrumental variables.\n",
     "\n",
-    "## Part 8: Sagan's overidentification test\n",
-    "\n",
-    "Conduct an overidentification test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(29.962770976126194, 4.4042154917054277e-08, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from statsmodels.sandbox.regression.gmm import LinearIVGMM\n",
-    "\n",
-    "over_id = fertility[['agefbrth', 'monthfm', 'ceb', 'idlnchld','educ', 'electric', 'urban' ]].dropna()\n",
-    "over_id = sm.add_constant(over_id)\n",
-    "endog_df = over_id['agefbrth']\n",
-    "#endog_df = hate[['monthfm', 'ceb', 'educ']]\n",
-    "exog_df = over_id[['const', 'monthfm', 'ceb', 'idlnchld', 'educ']]\n",
-    "instrument_df = over_id[['const', 'monthfm', 'ceb', 'idlnchld', 'electric', 'urban']]\n",
-    "\n",
-    "endog, exog, instrument  = map(np.asarray, [endog_df, exog_df, instrument_df])\n",
-    "\n",
-    "linear_gmm_results = LinearIVGMM(endog, exog, instrument).fit()\n",
-    "\n",
-    "print linear_gmm_results.jtest()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The problem of overidentification is that the instrumental variables might actually be correlated with the error. The Sagan test tests whether those errors are actually correllated with the set of supposedly exogenous instruments.\n",
-    "\n",
-    "\n",
     "## Conclusion\n",
-    "\n"
+    "\n",
+    "While the predictive power of our model may not be stellar with an $R^2$ of 0.033, we can be sure that our estimates for $\\beta$ are unbiased and that there is not a problem with endogeneity. Education, instrumented with access to electricity and urban area, remains the most important factor in predicting the age at which a woman will have her first birth.\n",
+    "\n",
+    "Statsmodels does a good job of IV regression, and all results match the output given by Stata. However, some features of Stata are lacking in statsmodels. A robust testing API for hausman-wu and Sargan's test of over identification would be very nice. In stata, those tests are as simple as typing \"estat overid\". Also, the examples on the statsmodels wiki are not stellar and could be expanded upon to include an econometric use case that I'm sure many data scientists and econometricians would find useful."
    ]
   }
  ],
